# rust-pocs

./: .gitignore
github-dashboard/: Cargo.toml  README.md  config.example.toml
github-dashboard/src/: app.rs  claude.rs  config.rs  github.rs  lang.rs  main.rs  ui.rs
rust-agent/: Cargo.toml
rust-agent/src/: main.rs
rust-chat/: Cargo.toml
rust-dedup/: Cargo.toml
rust-dedup/src/: cli.rs  format.rs  hasher.rs  main.rs  reporter.rs  scanner.rs
rust-httpmon/: Cargo.toml
rust-httpmon/src/: main.rs  monitor.rs  ui.rs
rust-playground/: Cargo.toml
rust-playground/src/: main.rs
rust-proxy/: Cargo.toml  config.toml
rust-proxy/src/: backend.rs  balancer.rs  config.rs  logging.rs  main.rs  pool.rs  proxy.rs
rust-raytracer/: Cargo.toml
rust-raytracer/src/: camera.rs  hittable.rs  main.rs  material.rs  ray.rs  sphere.rs  vec3.rs
rust-segment-tree/: Cargo.toml  README.md
rust-segment-tree/src/: lib.rs  main.rs
rust-trees/: Cargo.toml  README.md
rust-trees/examples/: avl_usage.rs  bst_usage.rs  segtree_usage.rs  traversals.rs  trie_usage.rs
rust-trees/src/: lib.rs  main.rs
rust-trees/src/trees/: avl.rs  bst.rs  merge_sort_tree.rs  mod.rs  persistent_seg.rs  segment_tree.rs  trie.rs
rust-tui/: Cargo.toml
rust-tui/src/: main.rs  ui.rs
rust-wasm/: Cargo.toml  index.html
rust-wasm/src/: lib.rs
