[package]
name = "rust-httpmon"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
