[package]
name = "rust-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
scopeguard = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
