[package]
name = "rust_trees"
version = "0.1.0"
edition = "2021"

[[example]]
name = "bst_usage"
path = "examples/bst_usage.rs"

[[example]]
name = "avl_usage"
path = "examples/avl_usage.rs"

[[example]]
name = "trie_usage"
path = "examples/trie_usage.rs"

[[example]]
name = "traversals"
path = "examples/traversals.rs"

[[example]]
name = "segtree_usage"
path = "examples/segtree_usage.rs"
